Add the main table

--- a/Me/art.html
+++ b/Me/art.html
@@ -23,30 +23,22 @@
 
 <div class="MainContent">
 To be continued...
-<br>
-<br>
-<hr>
-<br>
-<br>
-<hr>
-<br>
-<br>
-<hr><br>
-<br>
-<hr><br>
-<br>
-<hr><br>
-<br>
-<hr><br>
-<br>
-<hr><br>
-<br>
-<hr><br>
-<br>
-<hr><br>
-<br>
-<hr>
-grigijg
+<table style="width: 80%;" cellpadding="10">
+<tbody>
+<tr>
+<td><img src="" alt="description" width="95%" height="95%" /></td>
+<td><img src="" alt="description" width="95%" height="95%" /></td>
+<td><img src="" alt="description" width="95%" height="95%" /></td>
+<td><img src="" alt="description" width="95%" height="95%" /></td>
+</tr>
+<tr>
+<td><img src="" alt="description" width="95%" height="95%" /></td>
+<td><img src="" alt="description" width="95%" height="95%" /></td>
+<td><img src="" alt="description" width="95%" height="95%" /></td>
+<td><img src="" alt="description" width="95%" height="95%" /></td>
+</tr>
+</tbody>
+</table>
 </div>
 
 <div class="Sidebar">
