added NEW section of table

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
 	<td><a href="">Sitemap*</a></td>
       </tr>
       <tr>
+	<th scope="col">NEW</th>
+	<td><a href="">Nothing yet...</a></td>
+      </tr>
+      <tr>
 	<th scope="col">My Work</th>
 	<td><a href="">Art Gallery*</a></td>
       </tr>
