--- a/Navigation/Sidebar.html
+++ b/Navigation/Sidebar.html
@@ -10,6 +10,12 @@
                 <a href="https://deverellmanning.github.io/">Home Page</a>
             </li>
             <li>
+                <a href="https://deverellmanning.github.io/Coming.html">Upcoming Pages</a>
+            </li>
+            <li>
+                <a href="https://deverellmanning.github.io/news.html">News</a>
+            </li>
+            <li>
                 <a href="https://deverellmanning.github.io/Shurtleff Family/index.html">Shurtleff Home Page</a>
             </li>
             <li>
@@ -17,6 +23,12 @@
             </li>
                 <li>
                 <a href="https://deverellmanning.github.io/Minecraft/index.html">Minecraft</a>
+            </li>
+                <li>
+                <a href="https://deverellmanning.github.io/Me/art.html">Art Gallery</a>
+            </li>
+                <li>
+                <a href="https://deverellmanning.github.io/Art Show/index.html">Art Show</a>
             </li>
                 <li>
                 <a href="#">1--1</a>
