Fix typo in link

--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
   <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/styleM.css">
   <link rel="stylesheet" href="./styelart.css">
-  <link rel="stylesheet" href="https://https://deverellmanning.github.io/CSS/image.src.css">
+  <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/image.src.css">
 </head>
 
   <body>
