Testing out some pictures now!

--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -30,34 +30,34 @@ Almost Ready!
           <tr>
 <td>
          <div class="wrapper">
-           <img src="./DM Art_files/img.jpg" alt="description" width="95%" height="95%">
-           <img src="./DM Art_files/transparent.png" style="width:100%;height:100%;position: relative;">
+           <img src="./Scan2021-11-12_204731_001.jpg" alt="description" width="95%" height="95%">
+           <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
-       <span class="title">PIC 1</span><br>
-       <div class="disc"></div>  <div class="date"></div>
+       <span class="title">Reading</span><br>
+       <div class="disc"></div>  <div class="date">11/11/2021</div>
     </td>
 
     <td>
          <div class="wrapper">
-           <img src="./DM Art_files/img.jpg" alt="description" width="95%" height="95%">
-           <img src="./DM Art_files/transparent.png" style="width:100%;height:100%;position: relative;">
+           <img src="Pic1.jpg" alt="description" width="95%" height="95%">
+           <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
-       <span class="title">PIC 1</span><br>
-       <div class="disc"></div>  <div class="date"></div>
+       <span class="title">Quizicall</span><br>
+       <div class="disc"></div>  <div class="date" title="AROUND this time.  Upload date:">11/13/2021</div>
     </td>
 
 <td>
          <div class="wrapper">
-           <img src="./DM Art_files/img.jpg" alt="description" width="95%" height="95%">
-           <img src="./DM Art_files/transparent.png" style="width:100%;height:100%;position: relative;">
+           <img src="img.jpg" alt="description" width="95%" height="95%">
+           <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td>
          <div class="wrapper">
-           <img src="./DM Art_files/img.jpg" alt="description" width="95%" height="95%">
-           <img src="./DM Art_files/transparent.png" style="width:100%;height:100%;position: relative;">
+           <img src="img.jpg" alt="description" width="95%" height="95%">
+           <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
        <div class="disc"></div>  <div class="date"></div>
@@ -67,7 +67,7 @@ Almost Ready!
 <tr>
 <td>
          <div class="wrapper">
-           <img src="./DM Art_files/img.jpg" alt="description" width="95%" height="95%">
+           <img src="./img.jpg" alt="description" width="95%" height="95%">
            <img src="./DM Art_files/transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
@@ -75,7 +75,7 @@ Almost Ready!
     </td>
 <td>
          <div class="wrapper">
-           <img src="./DM Art_files/img.jpg" alt="description" width="95%" height="95%">
+           <img src="./img.jpg" alt="description" width="95%" height="95%">
            <img src="./DM Art_files/transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
@@ -83,7 +83,7 @@ Almost Ready!
     </td>
 <td>
          <div class="wrapper">
-           <img src="./DM Art_files/img.jpg" alt="description" width="95%" height="95%">
+           <img src="./img.jpg" alt="description" width="95%" height="95%">
            <img src="./DM Art_files/transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
@@ -91,7 +91,7 @@ Almost Ready!
     </td>
 <td>
          <div class="wrapper">
-           <img src="./DM Art_files/img.jpg" alt="description" width="95%" height="95%">
+           <img src="./img.jpg" alt="description" width="95%" height="95%">
            <img src="./DM Art_files/transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
