--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -20,11 +20,13 @@
 
   <body>
     <div class="Title">
-      <h1 title="Should be self explanetory... um, can I have a spell check please?">DM ART GALLERY</h1>
+      <h1 title="Should be self explanetory... um, can I have a spell check please?">DM GALLERY</h1>
+      <h3> The place where I show off my creative work!</h3>
     </div>
 
-    <div class="MainContent">
-Almost Ready!
+    <div class="MainContent"><p>
+Almost Ready!  I'm starting to put art on here, but I don't have a zoom function yet, and I wan't to make this page look nicer.  
+      The wierd static is for image protection, and goes away if you hover.  Thanks!</p>
       <table style="width: 80%;" cellpadding="10">
         <tbody>
           <tr>
@@ -116,7 +118,7 @@ Almost Ready!
 </div>
 
 <div class="Footer">
-<hi>Last Updated: 11/10/2021>
+<hi>Last Updated: 11/13/2021>
 <div class="Quote">
    "I laugh at gravity all the time. Hahaha, gravity."
 <br>
