--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -27,6 +27,7 @@
     <div class="MainContent"><p>
 Almost Ready!  I'm starting to put art on here, but I don't have a zoom function yet, and I wan't to make this page look nicer.  
       The wierd static is for image protection, and goes away if you hover.  Thanks!</p>
+      <p>Update(1/15/2021): I still have quite a bit of work to do, but I have more art/writing on here now.  I'll get to the titles/discriptions later.
       <table style="width: 80%;" cellpadding="10">
         <tbody>
           <tr>
@@ -50,7 +51,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 
 <td>
          <div class="wrapper">
-           <img src="img.jpg" alt="description" width="95%" height="95%">
+           <img src="./Protogen.1.jpg" alt="description" width="95%" height="95%">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
@@ -58,19 +59,55 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
     </td>
 <td>
          <div class="wrapper">
-           <img src="img.jpg" alt="description" width="95%" height="95%">
+           <img src="./rabbit.LFC.1.jpg" alt="description" width="95%" height="95%">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
-       <span class="title">PIC 1</span><br>
-       <div class="disc"></div>  <div class="date"></div>
+       <span class="title">Late For Class?</span><br>
+       <div class="disc"></div>  <div class="date">11/15/2021</div>
     </td>
 </tr>
 
 <tr>
 <td>
          <div class="wrapper">
+           <img src="./Scan2021-11-12_204731_003.jpg" alt="description" width="95%" height="95%">
+           <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
+         </div>
+       <span class="title">PIC 1</span><br>
+       <div class="disc"></div>  <div class="date"></div>
+    </td>
+<td>
+         <div class="wrapper">
+           <img src="./Scan2021-11-12_204731_006.jpg" alt="description" width="95%" height="95%">
+           <img src="transparent.png" style="width:100%;height:100%;position: relative;">
+         </div>
+       <span class="title">PIC 1</span><br>
+       <div class="disc"></div>  <div class="date"></div>
+    </td>
+<td>
+         <div class="wrapper">
+           <img src="./Housepets.Zach.1.jpg" alt="description" width="95%" height="95%">
+           <img src="transparent.png" style="width:100%;height:100%;position: relative;">
+         </div>
+       <span class="title">PIC 1</span><br>
+       <div class="disc"></div>  <div class="date"></div>
+    </td>
+<td>
+         <div class="wrapper">
+           <img src="./Scan2021-11-12_204731_002.jpg" alt="description" width="95%" height="95%">
+           <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
+         </div>
+       <span class="title">PIC 1</span><br>
+       <div class="disc"></div>  <div class="date"></div>
+    </td>
+</tr>
+          
+          
+<tr>
+<td>
+         <div class="wrapper">
            <img src="./img.jpg" alt="description" width="95%" height="95%">
-           <img src="./DM Art_files/transparent.png" style="width:100%;height:100%;position: relative;">
+           <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
        <div class="disc"></div>  <div class="date"></div>
@@ -78,7 +115,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 <td>
          <div class="wrapper">
            <img src="./img.jpg" alt="description" width="95%" height="95%">
-           <img src="./DM Art_files/transparent.png" style="width:100%;height:100%;position: relative;">
+           <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
        <div class="disc"></div>  <div class="date"></div>
@@ -86,7 +123,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 <td>
          <div class="wrapper">
            <img src="./img.jpg" alt="description" width="95%" height="95%">
-           <img src="./DM Art_files/transparent.png" style="width:100%;height:100%;position: relative;">
+           <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
        <div class="disc"></div>  <div class="date"></div>
@@ -94,7 +131,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 <td>
          <div class="wrapper">
            <img src="./img.jpg" alt="description" width="95%" height="95%">
-           <img src="./DM Art_files/transparent.png" style="width:100%;height:100%;position: relative;">
+           <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
        <div class="disc"></div>  <div class="date"></div>
@@ -103,7 +140,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 </tbody>
 </table>
 
-<div>
+<div>Scan2021-11-12_204731_006.jpg
 <p>Cupcake ipsum dolor sit amet cake croissant fruitcake muffin. Sweet bonbon candy powder cheesecake muffin sesame snaps jujubes. Muffin macaroon cheesecake cookie souffl&eacute; cookie cheesecake lollipop candy canes. Halvah cotton candy sesame snaps chocolate bar. Sugar plum dessert drag&eacute;e macaroon chupa chups. Cake cheesecake wafer cotton candy. Danish jelly halvah jelly beans tootsie roll donut. Halvah cheesecake halvah jujubes sweet roll biscuit croissant wafer. Cake halvah chocolate bar sugar plum apple pie.</p>
 <p>Tootsie roll pie topping powder sugar plum souffl&eacute;. Gingerbread sugar plum tiramisu powder macaroon candy canes drag&eacute;e icing. Sweet macaroon tootsie roll chocolate chocolate cake. Tootsie roll muffin donut apple pie gummies powder. Lollipop candy canes bonbon sesame snaps danish brownie croissant tiramisu. Oat cake pastry pudding ice cream fruitcake. Muffin pudding croissant pudding tart oat cake caramels sugar plum icing.</p>
 <p>Cheesecake danish biscuit jelly beans croissant souffl&eacute; sweet candy jelly beans. Fruitcake topping jelly-o bonbon. Topping gummi bears brownie cake bear claw chupa chups brownie carrot cake gummi bears. Cupcake sweet brownie sugar plum. Tiramisu jujubes carrot cake ice cream drag&eacute;e bear claw. Chocolate gingerbread drag&eacute;e souffl&eacute; tiramisu. Pudding gingerbread danish icing oat cake marshmallow chocolate. Topping bonbon oat cake caramels.</p>
