--- a/404.html
+++ b/404.html
@@ -2,10 +2,13 @@
 permalink: /404.html
 ---
 
-<html><body>
+<html>
+  <body>
   <h1>404</h1>
   <b>PAGE NOT FOUND</b>Sorry.
     <a href="https://deverellmanning.github.io/">Return to index<</a>
       <br>
       What does 404 mean?
-      Go to <a href="https://en.wikipedia.org/wiki/HTTP_404">Wikipedia Article</a> to find out!<body><html>
+      Go to <a href="https://en.wikipedia.org/wiki/HTTP_404">Wikipedia Article</a> to find out!
+  </body>
+</html>
