--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -45,7 +45,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 
     <td>
          <div class="wrapper">
-           <img src="./Me/content/small/Pic1.jpg" alt="description" width="95%" height="95%">
+           <img src="./content/small/Pic1.jpg" alt="description" width="95%" height="95%">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">Quizicall</span><br>
@@ -157,15 +157,15 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 <iframe src="https://deverellmanning.github.io/Poll/Test-Poll" style="border:none;" title="Iframe Example" width="100%"></iframe>
 </div>
 
-<div class="Footer">
+<div class="Footer" width=100%>
   
-<div class="Quote" style="text-align:center;>
+<div class="Quote" style="text-align:center;">
    "I laugh at gravity all the time. Hahaha, gravity."
 <br>
 -Aang, 'Avatar: The Last Airbender'.
 </div>
-  <span style="float:left;"><hi>Last Updated: 11/13/2021</hi> - <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a></span>
-
+  <span style="float:left;"><hi>Last Updated: 11/16/2021</hi> - <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a></span>
+<hr>
 
 </div>
 
