--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -145,8 +145,8 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 
       
       
-<div>Scan2021-11-12_204731_006.jpg
-<p>Cupcake ipsum dolor sit amet cake croissant fruitcake muffin. Sweet bonbon candy powder cheesecake muffin sesame snaps jujubes. Muffin macaroon cheesecake cookie souffl&eacute; cookie cheesecake lollipop candy canes. Halvah cotton candy sesame snaps chocolate bar. Sugar plum dessert drag&eacute;e macaroon chupa chups. Cake cheesecake wafer cotton candy. Danish jelly halvah jelly beans tootsie roll donut. Halvah cheesecake halvah jujubes sweet roll biscuit croissant wafer. Cake halvah chocolate bar sugar plum apple pie.</p>
+<div>
+  <p>Cupcake ipsum dolor sit amet cake croissant fruitcake muffin. Sweet bonbon candy powder cheesecake muffin sesame snaps jujubes. Muffin macaroon cheesecake cookie souffl&eacute; cookie cheesecake lollipop candy canes. Halvah cotton candy sesame snaps chocolate bar. Sugar plum dessert drag&eacute;e macaroon chupa chups. Cake cheesecake wafer cotton candy. Danish jelly halvah jelly beans tootsie roll donut. Halvah cheesecake halvah jujubes sweet roll biscuit croissant wafer. Cake halvah chocolate bar sugar plum apple pie.</p>
 </div>
 
 </div>
@@ -157,15 +157,17 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 <iframe src="https://deverellmanning.github.io/Poll/Test-Poll" style="border:none;" title="Iframe Example" width="100%"></iframe>
 </div>
 
-<div class="Footer" width=100%>
+<div class="Footer" style="position:fixed; width:100%;" width=100%>
   
-<div class="Quote" style="text-align:center;">
+<div class="Quote" style="text-align:right; left:100%;">
    "I laugh at gravity all the time. Hahaha, gravity."
 <br>
 -Aang, 'Avatar: The Last Airbender'.
 </div>
-  <span style="float:left;"><hi>Last Updated: 11/16/2021</hi> - <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a></span>
+  <span style=""><hi>Last Updated: 11/16/2021</hi> - <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a></span>
 <hr>
+  <br>
+  <br>
 
 </div>
 
