Hopefully add zoom functionality

--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -19,6 +19,7 @@
 </head>
 
   <body>
+    <script src="https://deverellmanning.github.io/Me/Zoom.js"></script>
     <div class="Title">
       <h1 title="Should be self explanetory... um, can I have a spell check please?">DM GALLERY</h1>
       <h3> The place where I show off my creative work!</h3>
@@ -36,7 +37,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
           <tr>
 <td>
          <div class="wrapper">
-           <img src="./Scan2021-11-12_204731_001.jpg" alt="description" width="95%" height="95%">
+           <img src="./Scan2021-11-12_204731_001.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">Reading</span><br>
@@ -45,7 +46,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 
     <td>
          <div class="wrapper">
-           <img src="./content/small/Pic1.jpg" alt="description" width="95%" height="95%">
+           <img src="./content/small/Pic1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">Quizicall</span><br>
@@ -54,7 +55,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 
 <td>
          <div class="wrapper">
-           <img src="./Protogen.1.jpg" alt="description" width="95%" height="95%">
+           <img src="./Protogen.1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
@@ -62,7 +63,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
     </td>
 <td>
          <div class="wrapper">
-           <img src="./rabbit.LFC.1.jpg" alt="description" width="95%" height="95%">
+           <img src="./rabbit.LFC.1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">Late For Class?</span><br>
@@ -73,7 +74,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 <tr>
 <td>
          <div class="wrapper">
-           <img src="./Scan2021-11-12_204731_003.jpg" alt="description" width="95%" height="95%">
+           <img src="./Scan2021-11-12_204731_003.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
@@ -81,7 +82,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
     </td>
 <td>
          <div class="wrapper">
-           <img src="./Scan2021-11-12_204731_006.jpg" alt="description" width="95%" height="95%">
+           <img src="./Scan2021-11-12_204731_006.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
@@ -89,7 +90,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
     </td>
 <td>
          <div class="wrapper">
-           <img src="./Housepets.Zach.1.jpg" alt="description" width="95%" height="95%">
+           <img src="./Housepets.Zach.1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
@@ -97,7 +98,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
     </td>
 <td>
          <div class="wrapper">
-           <img src="./Scan2021-11-12_204731_002.jpg" alt="description" width="95%" height="95%">
+           <img src="./Scan2021-11-12_204731_002.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
@@ -109,7 +110,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 <tr>
 <td>
          <div class="wrapper">
-           <img src="./img.jpg" alt="description" width="95%" height="95%">
+           <img src="./img.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
@@ -117,7 +118,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
     </td>
 <td>
          <div class="wrapper">
-           <img src="./img.jpg" alt="description" width="95%" height="95%">
+           <img src="./img.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
@@ -125,7 +126,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
     </td>
 <td>
          <div class="wrapper">
-           <img src="./img.jpg" alt="description" width="95%" height="95%">
+           <img src="./img.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
@@ -133,7 +134,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
     </td>
 <td>
          <div class="wrapper">
-           <img src="./img.jpg" alt="description" width="95%" height="95%">
+           <img src="./img.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
        <span class="title">PIC 1</span><br>
