Add zoomed img container

--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -173,6 +173,16 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 </div>
 
 <div class="Extra"></div>
+<!-- The expanding image container -->
+<div class="container">
+  <!-- Close the image -->
+  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
 
+  <!-- Expanded image -->
+  <img id="expandedImg" style="width:100%">
+
+  <!-- Image text -->
+  <div id="imgtext"></div>
+</div> 
 </body>
 </HTML>
