--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -29,6 +29,8 @@
 Almost Ready!  I'm starting to put art on here, but I don't have a zoom function yet, and I wan't to make this page look nicer.  
       The wierd static is for image protection, and goes away if you hover.  Thanks!</p>
       <p>Update(1/15/2021): I still have quite a bit of work to do, but I have more art/writing on here now.  I'll get to the titles/discriptions later.</p>
+      <p>Update(1/23/2021): The zoom functionality has been a little hard to work out, so I'll make sure to get back to it later, during thanksgiving break. Thanks!</p>
+      <br>
       
       <!-- ----- Start Gallery Table ----- -->
       <!-- Row 1 -->
