--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -38,7 +38,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
         <tbody>
           <tr>
 <td>
-         <div class="wrapper">
+         <div class="wrapper" id="c1">
            <img src="./Scan2021-11-12_204731_001.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
@@ -47,7 +47,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
     </td>
 
     <td>
-         <div class="wrapper">
+         <div class="wrapper" id="c2">
            <img src="./content/small/Pic1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
@@ -56,7 +56,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
     </td>
 
 <td>
-         <div class="wrapper">
+         <div class="wrapper" id="c3">
            <img src="./Protogen.1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
@@ -64,7 +64,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td>
-         <div class="wrapper">
+         <div class="wrapper"  id="c4">
            <img src="./rabbit.LFC.1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
@@ -75,7 +75,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 <!-- Row 2 -->
 <tr>
 <td>
-         <div class="wrapper">
+         <div class="wrapper"  id="c5">
            <img src="./Scan2021-11-12_204731_003.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
@@ -83,7 +83,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td>
-         <div class="wrapper">
+         <div class="wrapper"  id="c6">
            <img src="./Scan2021-11-12_204731_006.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
@@ -91,7 +91,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td>
-         <div class="wrapper">
+         <div class="wrapper"  id="c7">
            <img src="./Housepets.Zach.1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
@@ -99,7 +99,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td>
-         <div class="wrapper">
+         <div class="wrapper"  id="c8">
            <img src="./Scan2021-11-12_204731_002.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
@@ -111,7 +111,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
           
 <tr>
 <td>
-         <div class="wrapper">
+         <div class="wrapper"  id="c9">
            <img src="./img.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
@@ -119,7 +119,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td>
-         <div class="wrapper">
+         <div class="wrapper"  id="c10">
            <img src="./img.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
@@ -127,7 +127,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td>
-         <div class="wrapper">
+         <div class="wrapper"  id="c11">
            <img src="./img.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
@@ -135,7 +135,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td>
-         <div class="wrapper">
+         <div class="wrapper"  id="c12">
            <img src="./img.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
