Add zoom function

--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -37,7 +37,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
       <table style="width: 80%;" cellpadding="10">
         <tbody>
           <tr>
-<td>
+    <td onclick="Zoom2('c1');">
          <div class="wrapper" id="c1">
            <img src="./Scan2021-11-12_204731_001.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
@@ -46,7 +46,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <div class="disc"></div>  <div class="date">11/11/2021</div>
     </td>
 
-    <td>
+    <td onclick="Zoom2('c2');">
          <div class="wrapper" id="c2">
            <img src="./content/small/Pic1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
@@ -55,7 +55,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <div class="disc"></div>  <div class="date" title="AROUND this time.  Upload date:">11/13/2021</div>
     </td>
 
-<td>
+<td onclick="Zoom2('c3');">
          <div class="wrapper" id="c3">
            <img src="./Protogen.1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
@@ -63,7 +63,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <span class="title">PIC 1</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
-<td>
+<td onclick="Zoom2('c4');">
          <div class="wrapper"  id="c4">
            <img src="./rabbit.LFC.1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
@@ -74,7 +74,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 </tr>
 <!-- Row 2 -->
 <tr>
-<td>
+<td onclick="Zoom2('c5');">
          <div class="wrapper"  id="c5">
            <img src="./Scan2021-11-12_204731_003.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
@@ -82,7 +82,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <span class="title">PIC 1</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
-<td>
+<td onclick="Zoom2('c6');">
          <div class="wrapper"  id="c6">
            <img src="./Scan2021-11-12_204731_006.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
@@ -90,7 +90,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <span class="title">PIC 1</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
-<td>
+<td onclick="Zoom2('c7');">
          <div class="wrapper"  id="c7">
            <img src="./Housepets.Zach.1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
@@ -98,7 +98,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
        <span class="title">PIC 1</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
-<td>
+<td onclick="Zoom2('c8');">
          <div class="wrapper"  id="c8">
            <img src="./Scan2021-11-12_204731_002.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
