Add image aspect ratio fixer!

--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -174,17 +174,20 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 
 </div>
 
-<div class="Extra"></div>
-<!-- The expanding image container -->
-<div class="container">
-  <!-- Close the image -->
-  <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+<div class="Extra">
+  <!-- The expanding image container -->
+      <div class="container">
+        <!-- Close the image -->
+        <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
 
-  <!-- Expanded image -->
-  <img id="expandedImg" style="width:100%">
+        <!-- Expanded image -->
+        <img id="expandedImg" style="width: auto; height: 100%;">
 
-  <!-- Image text -->
-  <div id="imgtext"></div>
+        <!-- Image text -->
+        <div id="imgtext"></div>
+      </div>
+
+
   <style>
 
    /* The grid: Four equal columns that floats next to each other */
