--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/styleM.css">
   <link rel="stylesheet" href="./styelart.css">
   <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/image.src.css">
+  <link rel="stylesheet" href="./xpand.css">
 </head>
 
   <body>
@@ -30,6 +31,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
       The wierd static is for image protection, and goes away if you hover.  Thanks!</p>
       <p>Update(1/15/2021): I still have quite a bit of work to do, but I have more art/writing on here now.  I'll get to the titles/discriptions later.</p>
       <p>Update(1/23/2021): The zoom functionality has been a little hard to work out, so I'll make sure to get back to it later, during thanksgiving break. Thanks!</p>
+      <p>Update(1/25/2021): Ok! It almost works now!</p>
       <br>
       
       <!-- ----- Start Gallery Table ----- -->
@@ -167,7 +169,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 <br>
 -Aang, 'Avatar: The Last Airbender'.
 </div>
-  <span style=""><hi>Last Updated: 11/23/2021</hi> - <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a></span>
+  <span style=""><hi>Last Updated: 11/25/2021</hi> - <a href="https://deverellmanning.github.io"><address>deverellmanning.github.io</address></a></span>
 <hr>
   <br>
   <br>
@@ -188,59 +190,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
       </div>
 
 
-  <style>
-
-   /* The grid: Four equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 25%;
-  padding: 10px;
-}
-
-/* Style the images inside the grid */
-.column img {
-  opacity: 0.8;
-  cursor: pointer;
-  width:-moz-available
-}
-
-.column img:hover {
-  opacity: 1;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* The expanding image container (positioning is needed to position the close button and the text) */
-.container {
-  position: relative;
-  display: none;
-  scale:60%
-}
-
-/* Expanding image text */
-#imgtext {
-  position: absolute;
-  bottom: 15px;
-  left: 15px;
-  color: white;
-  font-size: 20px;
-}
-
-/* Closable button inside the image */
-.closebtn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  color: white;
-  font-size: 35px;
-  cursor: pointer;
-  } </style>
-  
+ 
 </div> 
 </body>
 </HTML>
