--- a/Me/Gallery.html
+++ b/Me/Gallery.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <HTML>
 <head>
 
@@ -62,7 +64,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
            <img src="./Protogen.1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
-       <span class="title">PIC 1</span><br>
+       <span class="title">Protogen</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td onclick="Zoom2('c4');">
@@ -81,7 +83,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
            <img src="./Scan2021-11-12_204731_003.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
-       <span class="title">PIC 1</span><br>
+       <span class="title">Bit of Rule Ideas</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td onclick="Zoom2('c6');">
@@ -89,7 +91,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
            <img src="./Scan2021-11-12_204731_006.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
-       <span class="title">PIC 1</span><br>
+       <span class="title">Story Page</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td onclick="Zoom2('c7');">
@@ -97,7 +99,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
            <img src="./Housepets.Zach.1.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
-       <span class="title">PIC 1</span><br>
+       <span class="title">Zach (from Housepets!)</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td onclick="Zoom2('c8');">
@@ -117,7 +119,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
            <img src="./img.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
-       <span class="title">PIC 1</span><br>
+       <span class="title">Temporary Filler</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td>
@@ -125,7 +127,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
            <img src="./img.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
-       <span class="title">PIC 1</span><br>
+       <span class="title">Temporary Filler</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td>
@@ -133,7 +135,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
            <img src="./img.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
-       <span class="title">PIC 1</span><br>
+       <span class="title">Temporary Filler</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
 <td>
@@ -141,13 +143,13 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
            <img src="./img.jpg" alt="description" width="95%" height="95%" onclick="zoom(this);">
            <img src="./transparent.png" style="width:100%;height:100%;position: relative;">
          </div>
-       <span class="title">PIC 1</span><br>
+       <span class="title">Temporary Filler</span><br>
        <div class="disc"></div>  <div class="date"></div>
     </td>
 </tr>
 </tbody>
 </table>
-
+<hr style="height:80px">
       
 
 </div>
@@ -158,7 +160,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 <iframe src="https://deverellmanning.github.io/Poll/Test-Poll" style="border:none;" title="Iframe Example" width="100%"></iframe>
 </div>
 
-<div class="Footer" style="position:fixed; width:100%;" width=100%>
+<div class="Footer">
   
 <div class="Quote" style="text-align:right; left:100%;">
    "I laugh at gravity all the time. Hahaha, gravity."
@@ -183,6 +185,7 @@ Almost Ready!  I'm starting to put art on here, but I don't have a zoom function
 
         <!-- Image text -->
         <div id="imgtext"></div>
+        <img src="./transparent.png" style="width:100%;height:100%;position: fixed;top: 0;left: 0;">
       </div>
 
 
