--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
       </tr>
       <tr>
 	<th scope="col">NEW</th>
-	<td><a href="">Nothing yet...</a></td>
+	<td><a href="https://deverellmanning.github.io/Me/Gallery.html">My Gallery!</a></td>
       </tr>
       <tr>
 	<th scope="col">My Work</th>
-	<td><a href="">Art Gallery*</a></td>
+	<td><a href="https://deverellmanning.github.io/Me/Gallery.html">My Gallery!</a></td>
       </tr>
       <tr>
 	<th scope="col">Minecraft</th>
