--- a/Navigation/Sidebar.html
+++ b/Navigation/Sidebar.html
@@ -15,6 +15,9 @@
             <li>
                 <a href="https://deverellmanning.github.io/news.html">News</a>
             </li>
+                        <li>
+                <a href="https://deverellmanning.github.io/Me/Gallery.html">My Gallery!</a>
+           
             <li>
                 <a href="https://deverellmanning.github.io/Shurtleff Family/index.html">Shurtleff Home Page</a>
             </li>
@@ -24,9 +27,7 @@
                 <li>
                 <a href="https://deverellmanning.github.io/Minecraft/index.html">Minecraft</a>
             </li>
-                <li>
-                <a href="https://deverellmanning.github.io/Me/art.html">Art Gallery</a>
-            </li>
+         </li>
                 <li>
                 <a href="https://deverellmanning.github.io/Art Show/index.html">Art Show</a>
             </li>
