--- a/news.html
+++ b/news.html
@@ -23,6 +23,16 @@
 <table>
   <tr>
     <td>
+      <h3>News on 12/14/2021 8:33  -  Deverell Manning</h3>
+      <h6><u>Christmas Update</u></h6>
+      <p><b>It's Christmas,</b><br> and that means something special.  As seen on the message on my homepage, I have redone my hompage's styling for Christmas!  As far as content goes, 
+        I have the Art peice planned, and it <i>should</i> appear on my website by Christmas.  I think we will all like it!  We <i>may</i> have a minecraft build or special article coming, if I have the time.  <br>Anyway, get ready, and enjoy what I've gotten so far!</p>
+      PS: My gallery is under construction again, as it is having loading/pop-out problems, so I'll try to fix that soon.
+      <i>- Deverell M.</i>
+    </td>
+  </tr>
+  <tr>
+    <td>
       <h3>News on 9/16/2021 8:17  -  Deverell Manning</h3>
       <p>Hello! This is where I'm now going to put news, whether it's important,<br> or unimpotant.
         <br><b>To get started:</b></p>
