--- a/Minecraft/index.html
+++ b/Minecraft/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <head>
 
-<title>Minecraft</title>
+<title>DM: Minecraft</title>
 <meta charset="UTF-8">
   <meta name="description" content="Minecraft stuff?">
   <meta name="keywords" content="Minecraft">
@@ -13,6 +13,8 @@
 
   <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/styleM.css">
   <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
+  <link rel="stylesheet" href="https://deverellmanning.github.io/Minecraft/icons-minecraft-0.47.css">
+  <link rel="stylesheet" href="./styel1.css">
 
 </head>
 <body>
@@ -22,8 +24,21 @@
 </div>
 
 <div class="MainContent">
+  <h4>Current Minecraft</h4>
+  <table>
+    <tbody>
+      <tr>
+        <td>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <h3>Favriote Servers</h3>
 <iframe style="width:728px;height:90px;max-width:100%;border:none;display:block;margin:auto" src="https://namemc.com/server/mc.hypixel.net/embed" width="728" height="90"></iframe>
-<a href="https://www.reddit.com/r/Minecraft/">Minecraft Reddit</a>
+<iframe style="width:728px;height:90px;max-width:100%;border:none;display:block;margin:auto" src="https://namemc.com/server/play.nexusmc.org/embed" width="728" height="90"></iframe>
+<hr>
+  <a href="https://www.reddit.com/r/Minecraft/">Minecraft Reddit</a>
+  
 </div>
 
 <div class="Sidebar">
