--- a/Minecraft/index.html
+++ b/Minecraft/index.html
@@ -24,15 +24,74 @@
 </div>
 
 <div class="MainContent">
-  <h4>Current Minecraft</h4>
   <table>
-    <tbody>
-      <tr>
-        <td>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<thead>
+  <tr>
+    <th colspan="2"><h2>Current Minecraft Happenings</h2></th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <th>Latest Article</th>
+    <td>...</td>
+  </tr>
+    <tr>
+    <th>Latest Addition</th>
+    <td>...</td>
+  </tr>
+  <tr>
+    <td colspan="2"></td>
+  </tr>
+  <tr>
+    <td colspan="2">My Minecraft</td>
+  </tr>
+  <tr>
+    <td>Current Survival World</td>
+    <td></td>
+  </tr>
+  <tr>
+    <th>Current Creative World</th>
+    <td>Hogwarts</td>
+  </tr>
+  <tr>
+    <th>Current Server</th>
+    <td>Nexus MC</td>
+  </tr>
+  <tr>
+    <td><a>Info</a></td>
+    <td><a>Playing Notes</a></td>
+  </tr>
+  <tr>
+    <td colspan="2"><hr></td>
+  </tr>
+  <tr>
+    <td colspan="2"><h3>Outside Events</h3></td>
+  </tr>
+  <tr>
+    <td>Current pdate</td>
+    <td>1.18</td>
+  </tr>
+  <tr>
+    <td>Latest Snapshot</td>
+    <td>None</td>
+  </tr>
+  <tr>
+    <td>Last Minecraft Live</td>
+    <td>...</td>
+  </tr>
+  <tr>
+    <td>Minecraft Now</td>
+    <td>WIP</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td colspan="2"><hr></td>
+  </tr>
+</tbody>
+</table>
   <h3>Favriote Servers</h3>
 <iframe style="width:728px;height:90px;max-width:100%;border:none;display:block;margin:auto" src="https://namemc.com/server/mc.hypixel.net/embed" width="728" height="90"></iframe>
 <iframe style="width:728px;height:90px;max-width:100%;border:none;display:block;margin:auto" src="https://namemc.com/server/play.nexusmc.org/embed" width="728" height="90"></iframe>
