--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <section class="Col2PicLeft">
 		<img src=".\Assets\Images\Sidebar-Background.jpg" width="200px"></img>
-		<p>Once again, I'm Deverell Manning!  A little bit about me, I dwell near the north-western US.  I'm a member of the Church of Jesus CHrist of Latter Day Saints, /*furry, */and a content creator with a website.  I'm trying to use and grow this website to it's full potential, but being busy, it is taking a long time.  My hobbies/intrests include drawing, programming, Interactive Fiction, Model-building, and Minecrafting.  I also enjoy reading, so I'm open to book suggestions.  For those who know, I know C++, HTML/CSS/JS, and CMD fairly well.  For more about me, visit my <a>About Me</a> page.</p>
+		<p>Once again, I'm Deverell Manning!  A little bit about me, I dwell near the north-western US.  I'm a member of the Church of Jesus Christ of Latter Day Saints, furry, and a content creator with a website.  I'm trying to use and grow this website to it's full potential, but being busy, it is taking a long time.  My hobbies/intrests include drawing, programming, Interactive Fiction, Model-building, and Minecrafting.  I also enjoy reading, so I'm open to book suggestions.  For those who know, I know C++, HTML/CSS/JS, and CMD fairly well.  Lastly, I am a begining martial artist and lucid dreamer.  For more about me, visit my <a>About Me</a> page.</p>
        <br><span><a href="https://www.reddit.com/user/deverell_manning"><i class="fab fa-reddit"></i></a>  -  <a><i class="fab fa-discord"></i></a></span>
 	</section>
 		
