--- a/404.html
+++ b/404.html
@@ -17,8 +17,8 @@ permalink: /404.html
 
     <base href="" target="_blank"/>
 
-    <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-    <link rel="stylesheet" type="text/css" href="./Assets/CSS/styel.css" />
+    <link rel="stylesheet" href="https://deverellmanning.github.io/Assets/CSS/Global.css">
+    <link rel="stylesheet" type="text/css" href="https://deverellmanning.github.io/Assets/CSS/styel.css" />
 </head>
 <body>
     <div class="Sidebar">
