Update and rename EligoTextum/index.html to Projects/EligoTextum/index.html

--- a/Projects/EligoTextum/index.html
+++ b/Projects/EligoTextum/index.html
@@ -10,7 +10,7 @@
   <meta name="robots" content="noindex, nofollow">/*change to all to show up on google*/
 
 <link rel="stylesheet" href="https://deverellmanning.github.io/CSS/Global.css">
-<link rel="stylesheet" href="https://deverellmanning.github.io/CSS/GreenScheme.css">
+<link rel="stylesheet" href="https://deverellmanning.github.io/Assets/SS/GreenScheme.css">
 
 </head>
 <body>
